[UPDATE] 【HADOOP】 add Hive CLI command use SQL to read hdfs file